# fire-brasil-app

./: .gitignore  DEPLOY.md  PRD.md  README.md  SETUP.md  deploy.bat  nixpacks.toml  start.bat  start.sh  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements-minimal.txt  requirements.txt  setup_backend.py
backend/app/: main.py  main_minimal.py
backend/app/agents/: document_processor.py  expense_categorizer.py  financial_advisor.py  fire_calculator.py
backend/app/core/: config.py  mcp_manager.py
backend/app/schemas/: expense.py  fire.py
backend/app/services/: database.py
backend/app/utils/: file_processing.py
frontend/: .env.example  package.json  vercel.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  ExpenseTracker.tsx  FireCalculator.tsx  Reports.tsx  Settings.tsx
frontend/src/services/: api.ts
